Fix notification design on Firefox

--- a/ui/client/stylesheets/notifications.styl
+++ b/ui/client/stylesheets/notifications.styl
@@ -45,6 +45,7 @@
     .dismiss-icon
       fill #cccccc
       background-color #3a3a3a
+      width 16px
       min-width 16px
       height 16px
   .notification-container
